--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.2.5",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.4.0",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
-    "glamorous-native": "^2.0.0",
+    "lodash": "^4.17.15",
     "mem": "^6.1.0",
     "package.json": "^2.0.1",
     "react": "~16.9.0",
