--- a/app.json
+++ b/app.json
@@ -22,8 +22,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.pawsomeindonesia.pawsome",
+      "buildNumber": "1.0.0"
     },
+    "sdkVersion": "37.0.0",
+    "android": {
+      "package": "com.pawsomeindonesia.pawsome",
+      "versionCode": 1,
+    }
+  },
     "description": ""
-  }
 }
