--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
     "sdkVersion": "37.0.0",
     "android": {
       "package": "com.pawsomeindonesia.pawsome",
-      "versionCode": 1,
+      "versionCode": 1
     }
   },
     "description": ""
