--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
-    "react-native-maps": "0.26.1",
+    "react-native-maps": "^0.26.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "~2.2.0",
