--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.4.0",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-constants": "~9.0.0",
     "expo-image-picker": "~8.1.0",
     "lodash": "^4.17.15",
     "mem": "^6.1.0",
