--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.2.0",
+    "@react-native-community/datetimepicker": "^2.2.2",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.2.5",
     "@react-navigation/native": "^5.1.4",
@@ -22,9 +23,11 @@
     "moment": "^2.27.0",
     "native-base": "^2.13.12",
     "package.json": "^2.0.1",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-is": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-date-picker": "^2.7.12",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
@@ -34,6 +37,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
+    "styled-components": "^5.1.1",
     "yargs-parser": "^18.1.3"
   },
   "devDependencies": {
