--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
     "@expo/vector-icons": "^10.2.0",
     "@react-native-community/datetimepicker": "^2.2.2",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.2.5",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.4.0",
+    "@ui-kitten/components": "^5.0.0",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-constants": "~9.0.0",
@@ -27,14 +29,19 @@
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-date-picker": "^2.7.12",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
+    "react-native-lightbox": "^0.8.1",
+    "react-native-looped-carousel": "^0.1.13",
     "react-native-maps": "^0.26.1",
-    "react-native-reanimated": "~1.7.0",
+    "react-native-reanimated": "^1.7.1",
+    "react-native-redash": "^14.2.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-svg": "^11.0.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
     "styled-components": "^5.1.1",
