--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
     "@expo/vector-icons": "^10.2.0",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/datetimepicker": "^2.2.2",
-    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/bottom-tabs": "^5.2.5",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.4.0",
@@ -32,18 +33,23 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-date-picker": "^2.7.12",
     "react-native-datepicker": "^1.7.2",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-image-picker": "^2.3.1",
     "react-native-lightbox": "^0.8.1",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-maps": "^0.26.1",
-    "react-native-reanimated": "^1.7.1",
+    "react-native-modal": "^11.5.6",
+    "react-native-reanimated": "~1.7.0",
     "react-native-redash": "^14.2.1",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "~2.2.0",
+    "react-native-screens": "^2.2.0",
     "react-native-svg": "^11.0.1",
+    "react-native-tab-view": "^2.14.4",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.3.7",
+    "react-navigation": "^4.4.0",
+    "react-navigation-drawer": "^2.5.0",
+    "react-navigation-stack": "^2.8.2",
+    "rmc-date-picker": "^6.0.10",
     "styled-components": "^5.1.1",
     "yargs-parser": "^18.1.3"
   },
