--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/ggwp.png",
     "splash": {
       "image": "./assets/ggwp.png",
       "resizeMode": "contain",
@@ -35,7 +35,8 @@
           "apiKey": "AIzaSyC-MlCst8qO6oTTMfy7HdKjPpKGRx4vaaw"
         }
       }
-    }
-  },
+    },
     "description": ""
+  },
+  "description": ""
 }
