--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "expo": "~37.0.3",
     "expo-constants": "~9.0.0",
     "expo-image-picker": "~8.1.0",
-    "expo-localization": "~8.1.0",
+    "expo-localization": "^8.1.0",
+    "expo-location": "~8.1.0",
     "i18n-js": "^3.7.1",
     "lodash": "^4.17.15",
     "mem": "^6.1.0",
@@ -42,6 +43,7 @@
     "react-native-looped-carousel": "^0.1.13",
     "react-native-maps": "^0.26.1",
     "react-native-modal": "^11.5.6",
+    "react-native-password-strength-meter": "0.0.3",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-redash": "^14.2.1",
