--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@bang88/react-native-ultimate-listview": "^3.3.2",
     "@eva-design/eva": "^2.0.0",
     "@expo/vector-icons": "^10.2.0",
     "@react-native-community/async-storage": "^1.11.0",
@@ -19,6 +20,7 @@
     "@ui-kitten/components": "^5.0.0",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-av": "~8.1.0",
     "expo-constants": "~9.0.0",
     "expo-image-picker": "~8.1.0",
     "expo-localization": "^8.1.0",
@@ -36,10 +38,12 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-date-picker": "^2.7.12",
     "react-native-datepicker": "^1.7.2",
+    "react-native-fast-image": "^8.3.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-picker": "^2.3.1",
+    "react-native-infinite-scroll-view": "^0.4.5",
+    "react-native-infinite-scrolling": "^2.0.0",
     "react-native-lightbox": "^0.8.1",
-    "react-native-localize": "^1.4.0",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-maps": "^0.26.1",
     "react-native-modal": "^11.5.6",
@@ -64,6 +68,7 @@
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.17",
     "babel-preset-expo": "~8.1.0",
+    "react-native-swipeout": "^2.3.6",
     "typescript": "~3.8.3"
   },
   "private": true
