--- a/package.json
+++ b/package.json
@@ -10,50 +10,61 @@
   "dependencies": {
     "@bang88/react-native-ultimate-listview": "^3.3.2",
     "@eva-design/eva": "^2.0.0",
-    "@expo/vector-icons": "^10.2.0",
-    "@react-native-community/async-storage": "^1.11.0",
-    "@react-native-community/datetimepicker": "^2.2.2",
-    "@react-native-community/masked-view": "^0.1.6",
+    "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-community/datetimepicker": "2.4.0",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.2.5",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.4.0",
     "@ui-kitten/components": "^5.0.0",
     "axios": "^0.19.2",
-    "expo": "~37.0.3",
-    "expo-av": "~8.1.0",
-    "expo-constants": "~9.0.0",
-    "expo-image-picker": "~8.1.0",
-    "expo-localization": "^8.1.0",
-    "expo-location": "~8.1.0",
+    "expo": "^38.0.0",
+    "expo-av": "~8.2.1",
+    "expo-calendar": "~8.2.1",
+    "expo-constants": "~9.1.1",
+    "expo-font": "^8.2.1",
+    "expo-image-picker": "~8.3.0",
+    "expo-linking": "^1.0.3",
+    "expo-localization": "~8.2.1",
+    "expo-location": "~8.2.1",
+    "expo-notifications": "~0.3.3",
+    "expo-permissions": "~9.0.1",
+    "expo-push-notification-helper": "^0.4.0",
     "i18n-js": "^3.7.1",
     "lodash": "^4.17.15",
     "mem": "^6.1.0",
     "moment": "^2.27.0",
     "native-base": "^2.13.12",
     "package.json": "^2.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
     "react-is": "^16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-background-timer": "^2.3.1",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-date-picker": "^2.7.12",
     "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^2.0.4",
     "react-native-fast-image": "^8.3.2",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-picker": "^2.3.1",
     "react-native-infinite-scroll-view": "^0.4.5",
     "react-native-infinite-scrolling": "^2.0.0",
     "react-native-lightbox": "^0.8.1",
     "react-native-looped-carousel": "^0.1.13",
-    "react-native-maps": "^0.26.1",
+    "react-native-maps": "0.27.1",
     "react-native-modal": "^11.5.6",
+    "react-native-modal-datetime-picker": "^8.7.1",
     "react-native-password-strength-meter": "0.0.3",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "~1.7.0",
+    "react-native-reanimated": "~1.9.0",
     "react-native-redash": "^14.2.1",
-    "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.2.0",
-    "react-native-svg": "^11.0.1",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
@@ -65,11 +76,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.17",
-    "babel-preset-expo": "~8.1.0",
+    "@types/react": "~16.9.41",
+    "@types/react-native": "~0.62.13",
+    "babel-preset-expo": "^8.2.3",
     "react-native-swipeout": "^2.3.6",
-    "typescript": "~3.8.3"
+    "typescript": "~3.9.5"
   },
   "private": true
 }
