--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-av": "~8.2.1",
     "expo-calendar": "~8.2.1",
     "expo-constants": "~9.1.1",
-    "expo-font": "^8.2.1",
+    "expo-font": "~8.2.1",
     "expo-image-picker": "~8.3.0",
     "expo-linking": "^1.0.3",
     "expo-localization": "~8.2.1",
